# boids-rs

./: Cargo.toml  README.md  index.html  main.js
src/: app.rs  boids.rs  main.rs  vector.rs
