[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
yew = "0.19.3"
gloo-timers = "0.2.4"
log = "0.4.17"
wasm-logger = "0.2.0"


[dependencies.web-sys]
version = "0.3.60"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "TextMetrics",
  "ImageData",
  "ImageBitmap"
]
